# trellis-dev-system

./: .gitignore  .gitleaks.toml  LICENSE  PROJECT_PROFILE.example.yaml  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  secret-scan.yml
devsystem/: gitleaks.toml.template
devsystem/claude/: path_registry.yaml.template  settings.json.template
devsystem/claude/agents/: code-quality-reviewer.md.template  spec-reviewer.md.template
devsystem/docs/: CLAUDE_SESSION_OBSERVABILITY.md.template  DEV_PIPELINE_STANDARD.md.template  MEMORY_MAINTENANCE.md.template  MEMSTORE_HANDOFF.md.template  SECURITY_GUIDANCE.md.template
devsystem/github/: pull_request_template.md.template
devsystem/scripts/: audit_project.py  bootstrap_project.py  check_manifests.py  claude_session_report.py  run_claude_session_report.sh
docs/: ANTHROPIC_CANONICAL_ALIGNMENT.md  METHODOLOGY_LOG.md  REPO_HARDENING.md
schemas/: project_profile.schema.json
templates/fintech-research/: PROJECT_PROFILE.yaml
templates/generic-python/: PROJECT_PROFILE.yaml
templates/python-postgres/: PROJECT_PROFILE.yaml
templates/python-railway/: PROJECT_PROFILE.yaml
tests/: test_audit_dummy_repo.py  test_bootstrap_dummy_repo.py  test_claude_surface_templates.py  test_no_anthropic_api_surface.py  test_no_memstore_id_hardcoded.py  test_plugin_manifest_present.py  test_portable_docs_templates.py  test_portable_scripts_contract.py  test_profile_seeds.py  test_project_profile_schema.py  test_repo_hardening_present.py  test_templates_render.py  test_workflow_templates.py
(+9 files in other folders)
